--- a/Bulkyweb/Bulky/BulkyWeb/Areas/FrontCustomer/Views/Home/Details.cshtml
+++ b/Bulkyweb/Bulky/BulkyWeb/Areas/FrontCustomer/Views/Home/Details.cshtml
@@ -86,8 +86,8 @@
                         <div class="row">
                             <div class="col-12 col-md-6 pb-1">
                                 <button type="submit"
-                                        class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
-                                    Add to Cart 
+                                        class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold" disabled>
+                                    Add to Cart (coming soon..)
                                 </button>
                             </div>
                         </div>
